Context menu link and all informative "Powered by" links open in new tabs. Additionally, fixed a bug with the toggle selectors for config options after removing the overseen repeated IDs, and panel hover shadows more visible now and cleaned up in terms of code.

--- a/frontend/styles/app.css
+++ b/frontend/styles/app.css
@@ -259,7 +259,6 @@ smorgas-board {
             inset: 0;
             width: 100%;
             height: 100%;
-            box-shadow: 0 0 0.2rem 0 var(--shadow-col);
         }
 
         &::part(cell) {
